--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
 <p><br> <br></p>
 <h1>
-Geography of Chronic Interstitial Lung Disease - A 2023 update
+Geography of Chronic Interstitial Lung Disease - A 2024 update
 </h1>
 <p><br></p>
 <h2>
@@ -364,7 +364,7 @@ URL: howardm.github.io/GeographyofInterstitialLungDisease
 <li>Unusual causes of chronic interstitial fibrosis
 <ul>
 <li>Familial Pulmonary Fibrosis</li>
-<li>Short Telomere Syndromes (Telemeropathy)</li>
+<li>Short Telomere Syndromes (Telemeropathies)</li>
 <li>Surfactant protein (SP)-C deficiency</li>
 <li>Pleuropulmonary Fibroelastosis</li>
 <li>Interstitial fibrosis with non-emphysematous lung cysts</li>
@@ -689,7 +689,7 @@ traction bronchiolectasis
 <ul>
 <li>Smoking-Related Interstitial Fibrosis (SRIF)</li>
 <li>Smoking- Related Fibrosis with Airspace Enlargement (AEF)</li>
-<li>Combined Pulmonary Fibrosis-Emphysema Syndrome (CPEF)</li>
+<li>Combined Pulmonary Fibrosis-Emphysema Syndrome (CPFE)</li>
 </ul>
 </div><div class="column" style="width:70%;">
 <div class="quarto-figure quarto-figure-center">
@@ -825,7 +825,7 @@ traction bronchiolectasis
 <p>You’ll get extra bonus points if you remember the acronym!!</p>
 </div><div class="column" style="width:70%;">
 <p><br></p>
-<p>COPA syndrome</p>
+<p>COPA syndrome (mutations affect a narrow amino acid stretch in the COPA gene-encoding COPα protein)</p>
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="images/copa.jpg" style="width:100.0%"></p>
